1.4.3.2. Local-Variable Type Inference [#270850]