@@ -16,37 +16,35 @@ public class DepartmentsTest {
 
     @Test
     public void whenMissed() {
-        List<String> input = List.of("k1/sk1");
-        List<String> expect = List.of("k1", "k1/sk1");
-        List<String> result = Departments.fillGaps(input);
+        var input = List.of("k1/sk1");
+        var expect = List.of("k1", "k1/sk1");
+        var result = Departments.fillGaps(input);
         sortAsc(result);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenNonChange() {
-        List<String> input = List.of("k1", "k1/sk1");
-        List<String> expect = List.of("k1", "k1/sk1");
-        List<String> result = Departments.fillGaps(input);
+        var input = List.of("k1", "k1/sk1");
+        var expect = List.of("k1", "k1/sk1");
+        var result = Departments.fillGaps(input);
         sortAsc(result);
         assertThat(result, is(expect));
     }
 
     @Test
     public void whenReversedSortOne() {
-        List<String> input = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
-        List<String> expect = List.of("k2", "k2/sk1", "k1", "k1/sk1");
+        var input = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1");
+        var expect = List.of("k2", "k2/sk1", "k1", "k1/sk1");
         Collections.sort(input, new DepDescComp());
-        //List<String> result = Departments.fillGaps(input);
         assertThat(input, is(expect));
     }
 
     @Test
     public void whenReversedSortTwo() {
-        List<String> input = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/ssk2");
-        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/ssk2", "k1", "k1/sk1");
+        var input = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/ssk2");
+        var expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk1/ssk2", "k1", "k1/sk1");
         Collections.sort(input, new DepDescComp());
-        //List<String> result = Departments.fillGaps(input);
         assertThat(input, is(expect));
     }
 
